--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 	<body>
 		<div class="main">
 			<div class="phone">
+				<div class="notch"></div>
 				<!-- header -->
 				<div class="header">
 					<div class="header-info">
@@ -50,7 +51,7 @@
 								class="profile-img"
 							/>
 							<div class="profile-info">
-								<h4 class="profile-name">Samuel Green</h4>
+								<h3 class="profile-name">Samuel Green</h3>
 								<p class="status">Available to Walk</p>
 							</div>
 						</div>
@@ -67,15 +68,17 @@
 				<div class="msg msg-left">
 					<p>Could you send over some pictures of your dog, please?</p>
 				</div>
-				<div class="msg msg-right">
-					<img src="./images/dog-image-1.jpg" alt="dog" class="dog-pic" />
-					<img src="./images/dog-image-2.jpg" alt="dog" class="dog-pic" />
-					<img src="./images/dog-image-3.jpg" alt="dog" class="dog-pic" />
+				<div class="pics">
+					<div class="right-dogs">
+						<img src="./images/dog-image-1.jpg" alt="dog" class="dog-pic" />
+						<img src="./images/dog-image-2.jpg" alt="dog" class="dog-pic" />
+						<img src="./images/dog-image-3.jpg" alt="dog" class="dog-pic" />
+					</div>
 				</div>
 				<div class="msg msg-right">
 					<p>Here are a few pictures. She’s a happy girl!</p>
 				</div>
-				<div class="msg msg-right">
+				<div class="msg msg-right right-sub">
 					<p>Can you make it?</p>
 				</div>
 				<div class="msg msg-left">
@@ -84,20 +87,20 @@
 						take her out for?
 					</p>
 				</div>
-				<div class="msg msg-left">
+				<div class="msg msg-left option">
 					<div class="price">
 						<div class="time">
 							<i class="far fa-circle"></i>
-							30 minute walk
+							<p>30 minute walk</p>
 						</div>
 						<div class="total-price">$29</div>
 					</div>
 				</div>
-				<div class="msg msg-left">
+				<div class="msg msg-left option">
 					<div class="price">
 						<div class="time">
 							<i class="far fa-circle"></i>
-							1 hour walk
+							<p>1 hour walk</p>
 						</div>
 						<div class="total-price">$49</div>
 					</div>
@@ -109,7 +112,7 @@
 			</div>
 
 			<div class="info">
-				<h2 class="info-title">Simple booking</h2>
+				<h1 class="info-title">Simple booking</h1>
 				<p class="info-subtitle">
 					Stay in touch with our dog walkers through the chat interface. This
 					makes it easy to discuss arrangements and make bookings. Once the walk
