mobile screen size reduce

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 				<!-- chat -->
 				<div class="msg msg-left">
-					<p>That sounds great. I’d be happy with that.</p>
+					<p>That sounds great. I’d be happy to discuss more.</p>
 				</div>
 				<div class="msg msg-left">
 					<p>Could you send over some pictures of your dog, please?</p>
